macros/machine-check-macros/tests/cases/07-item_impl-unsupported.stderr
error: machine-check: Defaultness not supported
 --> tests/cases/07-item_impl-unsupported.rs:5:5
  |
5 |     default impl A {}
  |     ^^^^^^^

error: machine-check: Unsafety not supported
 --> tests/cases/07-item_impl-unsupported.rs:7:5
  |
7 |     unsafe impl A {}
  |     ^^^^^^
